# llive

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE-COMMERCIAL  NOTICE  README.md  SECURITY.md  TRADEMARK.md  pyproject.toml
.claude/skills/add-grounding-channel/: SKILL.md
.claude/skills/observe-cycle/: SKILL.md
.claude/skills/record-implementation/: SKILL.md
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-mvr/: 01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PLAN.md  01-VERIFICATION.md
.planning/phases/02-adaptive/: 02-CONTEXT.md  02-DISCUSSION-LOG.md  02-PLAN.md  02-VERIFICATION.md
.smoke-venv/: pyvenv.cfg
.smoke-venv/Scripts/: activate  activate.bat
crates/llive_rust_ext/: Cargo.toml
crates/llive_rust_ext/src/: lib.rs
docs/: BUGS_2026-05-16_brief_ab.md  PAGES.md  PROGRESS.md  SESSION_SUMMARY.md  _config.yml  architecture.md  custom_domain_guide.md  data_model.md  demos.html  evaluation_metrics.md  family_integration.md  family_setup_status.md  fullsense_naming_research.md  fullsense_spec_eternal.md  glossary.md  index.md  llmesh_p2p_mesh_rfc.md  llmesh_p2p_phase3_skill_chunk_rfc.md  llove_jsonl_v1.md  mcp_integration.md  model_templates.md  observability_schema.md  requirements_v0.1.md  requirements_v0.2_addendum.md  requirements_v0.3_triz_self_evolution.md  requirements_v0.4_llm_wiki.md  requirements_v0.5_spatial_memory.md  requirements_v0.6_concurrency.md  requirements_v0.7_rust_acceleration.md  roadmap.md  rust_phase5_design_draft.md  security_model.md  testing_strategy.md  v0.2_rad_techdoc.html  v1.0_migration_plan.md  yaml_schemas.md
docs/audits/: independence-2026-05-17.md
docs/benchmarks/: 2026-05-17-cog-fx-contribution.json  2026-05-17-cog-fx-contribution.md
docs/benchmarks/2026-05-16-progressive-full/: matrix.json  summary.md
docs/benchmarks/2026-05-16-progressive-lxl/: l-llama3.2_latest.jsonl  l-qwen2.5_14b.jsonl  l-qwen2.5_7b.jsonl  matrix.json  summary.md  xl-llama3.2_latest.jsonl  xl-qwen2.5_14b.jsonl  xl-qwen2.5_7b.jsonl
docs/benchmarks/2026-05-16-progressive-m/: m-llama3.2_latest.jsonl  m-qwen2.5_14b.jsonl  m-qwen2.5_7b.jsonl  matrix.json  summary.md
docs/benchmarks/2026-05-16-progressive-merged/: matrix.json  summary.md
docs/benchmarks/2026-05-16-progressive-smoke/: matrix.json  summary.md  xs-llama3.2_latest.jsonl
docs/benchmarks/2026-05-16-progressive-xss/: matrix.json  s-llama3.2_latest.jsonl  s-qwen2.5_14b.jsonl  s-qwen2.5_7b.jsonl  summary.md  xs-llama3.2_latest.jsonl  xs-qwen2.5_14b.jsonl  xs-qwen2.5_7b.jsonl
docs/benchmarks/2026-05-17-full-validation/: SUMMARY.md  annotations.json  codebase_stats.json  continuous_briefs.json  large_input.json  math_verifier.json  oka_pipeline.json  soak_500.json  vrb.json  vs_cloud.json  vs_other_llms.json
docs/benchmarks/2026-05-17-grounding-observation/: observation.md
docs/briefs/: QUICKSTART.md
docs/bugs/: bug-8-status.md
docs/demos/anatomy/: index.html
docs/legal/trademark/: EUIPO_FullSense_draft.md  J-PlatPat_FullSense_draft.md  README.md  USPTO_FullSense_draft.md  Wave2_child_marks_draft.md
docs/linkedin/: post_2026-05-14_overview.en.md  post_2026-05-14_overview.ja.md  post_2026-05-14_overview.ko.md  post_2026-05-14_overview.zh.md  post_2026-05-16_update.en.md  post_2026-05-16_update.ja.md  post_2026-05-16_update.ko.md  post_2026-05-16_update.zh.md  post_2026-05-16_update_v2.en.md  post_2026-05-16_update_v2.ja.md  post_2026-05-16_update_v2.ko.md  post_2026-05-16_update_v2.zh.md
docs/proposals/: brief_api_design.md  cabt-01_reference_attention.md
docs/qiita/: AUTHORING.md  qiita-overview.en.md  qiita-overview.ko.md  qiita-overview.md  qiita-overview.zh.md
docs/references/historical/: edla_kaneko_1999.md
docs/scenarios/learning/: edla_xor_report.md
docs/setup/: llama-server-company-setup.md  ollama-company-setup.md
examples/: edla_xor_demo.py
scripts/: add_spdx_header.py  audit_independence.py  bench_annotations.py  bench_codebase_stats.py  bench_continuous_briefs.py  bench_large_input.py  bench_math_verifier.py  bench_oka_pipeline.py  bench_progressive.py  bench_soak_500.py  bench_vrb.py  bench_vs_cloud.py  bench_vs_other_llms.py  import_rad.py  import_rad_extended.py  inspect_hf_model.py  measure_cog_fx_contribution.py  merge_progressive_matrix.py  observe_grounding.py  record_demos.sh  run_brief.py
specs/: README.md
specs/containers/: adaptive_reasoning_v1.yaml
specs/resources/: triz_features.yaml
specs/rust_ffi/: overview.md
specs/schemas/: subblock-spec.v1.json
specs/subblocks/: attention.yaml  common.yaml  ffn.yaml  llive_extensions.yaml
src/llive/: __init__.py  annotations.py
src/llive/approval/: __init__.py  bus.py  decorators.py  ledger.py  policy.py
src/llive/brief/: __init__.py  (+11 more)
tests/: conftest.py
tests/component/: test_bench.py  test_cli.py  test_cli_phase2.py  test_cog_fx_e2e.py  test_concurrent.py  test_consolidation.py  test_container_executor.py  test_nested_container.py  test_pipeline.py  test_self_reflection.py  test_wiki_ingest.py
tests/property/: test_brief_fuzz.py  test_change_op_invert.py  test_rust_python_parity.py
tests/unit/: test_adapter_blocks.py  test_adapter_sign.py  test_annotations.py  test_approval_bus.py  test_approval_bus_policy.py  test_approval_ledger.py  test_approval_policy.py  test_audit.py  test_bayesian_surprise.py  test_bench_extra.py  test_bridges.py  test_brief_cli.py  test_brief_cog.py  test_brief_grounding.py  test_brief_mcp.py  test_brief_roles.py  test_brief_runner.py  test_brief_runner_oka.py  test_brief_runner_verifier.py  test_brief_schema.py  test_bwt.py  test_change_op_extra.py  test_concept.py  test_consolidation_extra.py  test_consolidation_rad_mirror.py  test_contradiction.py  test_coverage_fill.py  test_creat_kj.py  test_creat_mindmap.py  test_creat_structurize.py  test_creat_synectics.py  test_deception.py  test_demo_scenarios.py  test_edge_weight.py  test_edla.py  test_eval_spec.py  test_executor_conditions.py  test_fullsense.py  test_fullsense_llm_backend.py  test_fullsense_runner.py  (+71 more)
(+162 files in other folders)
