[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llmesh-llive"
version = "0.0.1"
description = "Self-evolving modular memory LLM framework — biological memory × formal verification × industrial IoT mesh × TUI HITL"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11,<3.12"
authors = [{ name = "Kazufumi Furuse", email = "kazufumi@furuse.work" }]
keywords = [
  "llm",
  "self-evolution",
  "modular-memory",
  "continual-learning",
  "neural-architecture-search",
  "industrial-iot",
  "tui",
]
classifiers = [
  "Development Status :: 1 - Planning",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Operating System :: OS Independent",
]
dependencies = [
  # Phase 1 minimum. Filled in as implementation progresses.
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
  "pytest-cov",
  "ruff",
  "mypy",
]

[project.urls]
Homepage = "https://github.com/furuse-kazufumi/llive"
Documentation = "https://github.com/furuse-kazufumi/llive/tree/main/docs"
Issues = "https://github.com/furuse-kazufumi/llive/issues"
Family = "https://github.com/furuse-kazufumi/llmesh-suite"

[tool.hatch.build.targets.wheel]
packages = ["llive"]

[tool.ruff]
line-length = 100
target-version = "py311"
