[package]
name = "llive_rust_ext"
version = "0.5.0"
edition = "2021"
description = "Optional Rust acceleration layer for llive (PyO3-based)"
license = "MIT"

[lib]
name = "llive_rust_ext"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.2", features = ["extension-module"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
